# eurlex

./: .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  COPYRIGHT  README.md  README.rst  pyproject.toml  tox.ini
.github/workflows/: build.yaml  publish.yaml
changelog.d/: 20220815_132357_step21.md  20220816_160003_step21.md  20220816_160930_step21.md
eurlex/: __init__.py  eurlex.py
tests/: test_eurlex.py  test_eurlex_mock.py
