[tool.poetry]
name = "pyeurlex"
version = "0.1.5"
description = "This is a python module to create SPARQL queries for the EU Cellar repository, run them and subsequently download their data. Notably, it directly supports all resource types."
authors = ["step21 <step21@devtal.de>"]
packages = [
    {include = "eurlex"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.2"
beautifulsoup4 = "^4.11.1"
pandas = "^1.3.0"
requests = "^2.28.1"
lxml = "^4.9.1"
sparql-dataframe = "^0.4"
halo = "^0.0.31"
fire = "^0.4.0"
"pdfminer.six" = "^20220524"
importlib-metadata = "1.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.16.0"}
black = {version = "^22.6.0", allow-prereleases = true}
tox = "^3.25.1"
pylint = "^2.15.0"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
format = "md"
