[tool.poetry]
name = "pyeurlex"
version = "0.3.0"
description = "This is a python module to create SPARQL queries for the EU Cellar repository, run them and subsequently download their data. Notably, it directly supports all resource types."
authors = ["step21 <step21@devtal.de>"]
packages = [
    {include = "eurlex"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
pandas = ">=1.5,<3"
requests = "^2.28.1"
lxml = ">=4.9.1,<7"
sparql-dataframe = "^0.4"
halo = "^0.0.31"
fire = ">=0.4.0,<1"
"pdfminer.six" = ">=20220524"
scriv = {extras = ["toml"], version = ">=0.16.0,<2"}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<9"
pre-commit = ">=3.0.0,<5"
scriv = {extras = ["toml"], version = ">=0.16.0,<2"}
black = ">=23.0,<25"
tox = ">=4.0,<5"
pylint = ">=2.15.0,<4"
coverage = ">=6.4.4,<8"
poetry-bumpversion = ">=0.3.0,<1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
format = "md"

[tool.poetry_bumpversion.file."eurlex/__init__.py"]

# This is a test
